fix: z-index of the parallaxed image

--- a/css/styles.css
+++ b/css/styles.css
@@ -832,6 +832,7 @@ template {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background: url(../img/newsletter-background.jpg);
