--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -23,6 +23,7 @@
     right: 0
     bottom: 0
     left: 0
+    z-index: -1
     width: 100%
     height: 100%
     background: url(../img/newsletter-background.jpg)
